--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -1,5 +1,4 @@
 #bank-library {
-background: #2c2c2c;
 bottom: 45px;
 left: 0;
 overflow-x: hidden;
@@ -81,6 +80,7 @@ input::selection {
   overflow-y: auto;
   top: 45px;
   width: 20%;
+  background: #2c2c2c;
   > div {
     &.add-bank {
       color: #fff;
@@ -307,7 +307,7 @@ input::selection {
 #bank-edit {
   position: fixed;
   display: block;
-  background-color: #111;
+  background: #111 url(../img/watermark.png) 100% 100% no-repeat;
   width: 80%;
   bottom: 45px;
   top: 45px;
