--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -130,19 +130,19 @@
     right: 0;
     top: 45px;
     bottom: 45px;
-    background: #111 !important;
+    background: #111 url(../img/watermark.png) 100% 100% no-repeat;
     overflow-y: auto;
     .plugins-wrapper {
     	width: 100%;
     }
     .cloud-plugin {
       color: #fff;
-      background-color: #111;
       .make-xs-column(12);
       .make-sm-column(6);
       .make-md-column(6);
       .make-lg-column(4);
       padding: 15px;
+      transition: all 0.33s;
       &:hover {
         background-color: #212121;
         cursor: pointer;
