--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -58,7 +58,7 @@
     right: 0px;
     top: 45px;
     bottom: 45px;
-    background: #111;
+    background: #111 url(../img/watermark.png) 100% 100% no-repeat;
     padding-top: 1.5%;
     .pedalboard {
       color: #fff;
