Fix plus icon of add ank

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -93,8 +93,11 @@ input::selection {
         background: @brand-warning;
       }
       .icon-add {
-        display: inline.block;
-        width: 32px;
+        display: inline-block;
+        width: 24px;
+        margin-right: 6px;
+        padding-left: 5px;
+        box-sizing: border-box;
       }
     }
     &.selected span.move {
