--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -141,101 +141,109 @@
       .make-sm-column(6);
       .make-md-column(6);
       .make-lg-column(4);
-      padding: 15px;
+      height: 120px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+      background: rgba(255, 255, 255, 0.07);
       transition: all 0.33s;
+      cursor: pointer;
       &:hover {
-        background-color: #212121;
-        cursor: pointer;
+        background-color: @brand-primary;
         .description {
-          .see_more {                     
-            background: -moz-linear-gradient(top, @gradient3 0%, @gradient4 100%); /* FF3.6+ */
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@gradient3), color-stop(100%,@gradient4)); /* Chrome,Safari4+ */
-            background: -webkit-linear-gradient(top, @gradient3 0%,@gradient4 100%); /* Chrome10+,Safari5.1+ */
-            background: -o-linear-gradient(top, @gradient3 0%,@gradient4 100%); /* Opera 11.10+ */
-            background: -ms-linear-gradient(top, @gradient3 0%,@gradient4 100%); /* IE10+ */
-            background: linear-gradient(to bottom, @gradient3 0%,@gradient4 100%); /* W3C */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00222222', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
+          background: rgba(136, 57, 150, 0.8);
+          hr {
+            border: none;
+            border-bottom: 1px solid #212121;
           }
         }
         figure {
-          div {            
-            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&1+65,0+100 */          
-            background: -webkit-linear-gradient(left, @gradient3 0%,@gradient4 70%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to right, @gradient3 0%, gradient4 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */          
-          }
+          width: calc(~'100% - 20px');
+          height: 170px;
+          top: -25px;
+          left: 10px;
+          background-position: 0% 50%;
         }
       }
       figure {
-        .make-sm-column(4);
-        overflow: hidden;
-        height: 166px;
-        img {
-          max-height: 166px;          
-          background-size: contain !important;          
-          margin: auto;
-          max-width: 270px;
-        }
-        div {
-          position: absolute;
-          width: 30px;
-          height: 100%;
-          top: 0;
-          right: -3px;
-          /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&1+65,0+100 */          
-          background: -webkit-linear-gradient(left, @gradient1 0%,@gradient2 70%); /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to right, @gradient1 0%, gradient2 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */          
-        }
+        height: 100px;
+        position: absolute;
+        top: 10px;
+        left: 20px;
+        width: 100px;
+        background-size: contain;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        margin: 0;
+        transition: all 0.33s linear;
       }
       .description {
         .no_description {
-          color: #444;
+          color: rgba(255, 255, 255, 0.25);
         }
+        transition: all 0.33s;
         display: block;
         line-height: 1.5;
         overflow: hidden;
-        height: 99px;
-        overflow: hidden;        
-        .see_more {
+        position:absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 140px;
+        background: rgba(33, 33, 33, 0.66);
+        hr {
+          transition: all 0.33s;
+          border: none;
+          border-bottom: 1px solid @brand-primary;
+          margin: 0;
           position: absolute;
+          top: 50%;
+          left: 0;
           width: 100%;
-          height: 18px;
-          bottom: 0;
-          margin-bottom: 25px;
-          z-index: 10;          
-          background: -moz-linear-gradient(top, @gradient1 0%, @gradient2 100%); /* FF3.6+ */
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@gradient1), color-stop(100%,@gradient2)); /* Chrome,Safari4+ */
-          background: -webkit-linear-gradient(top, @gradient1 0%,@gradient2 100%); /* Chrome10+,Safari5.1+ */
-          background: -o-linear-gradient(top, @gradient1 0%,@gradient2 100%); /* Opera 11.10+ */
-          background: -ms-linear-gradient(top, @gradient1 0%,@gradient2 100%); /* IE10+ */
-          background: linear-gradient(to bottom, @gradient1 0%,@gradient2 100%); /* W3C */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00222222', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
         }
-         .title {
-           display: block;
-           height: 18px;
-           text-transform: uppercase;
-           font-weight: bold;
-           overflow: hidden;
-           position: relative;
-         }
+        .title {
+          display: block;
+          text-transform: uppercase;
+          font-weight: bold;
+          overflow: hidden;
+          padding: 8px 10px 1px 10px;
+        }
+        .author {
+          display: block;
+          padding: 1px 10px;
+        }
+        p {
+          position: absolute;
+          left: 10px;
+          right: 10px;
+          top: 75%;
+          transform: translateY(-50%);
+          height: 2.4em;
+          line-height: 1.2em;
+          overflow: hidden;
+        }
       }
       .status {
-         display: inline-block;
+         display: block;
          padding: 1px 4px;
-         margin-top: 10px;
          text-align: center;
          text-transform: uppercase;
          font-weight: bold;
          font-size: 9px;
+         position: absolute;
+         top: 3px;
+         right: 3px;
        }
        .status.installed {
+         border: 1px solid @brand-success;
          background-color: @brand-success;
          &:after {
            content: "installed";
          }
        }
        .status.outdated {
+         border: 1px solid @brand-warning;
          background-color: @brand-warning;
+         color: #212121;
          &:after {
            content: "new version";
          }
