--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6065,8 +6065,12 @@ button.close {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  padding: 15px;
+  height: 120px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  background: rgba(255, 255, 255, 0.07);
   transition: all 0.33s;
+  cursor: pointer;
 }
 @media (min-width: 768px) {
   .cloud-plugins .cloud-plugin {
@@ -6087,120 +6091,102 @@ button.close {
   }
 }
 .cloud-plugins .cloud-plugin:hover {
-  background-color: #212121;
-  cursor: pointer;
+  background-color: #883996;
 }
-.cloud-plugins .cloud-plugin:hover .description .see_more {
-  background: -moz-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(33, 33, 33, 0)), color-stop(100%, #212121));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, rgba(33, 33, 33, 0) 0%, #212121 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00222222', endColorstr='#222222', GradientType=0);
-  /* IE6-9 */
+.cloud-plugins .cloud-plugin:hover .description {
+  background: rgba(136, 57, 150, 0.8);
 }
-.cloud-plugins .cloud-plugin:hover figure div {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&1+65,0+100 */
-  background: -webkit-linear-gradient(left, rgba(33, 33, 33, 0) 0%, #212121 70%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(33, 33, 33, 0) 0%, gradient4 70%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+.cloud-plugins .cloud-plugin:hover .description hr {
+  border: none;
+  border-bottom: 1px solid #212121;
+}
+.cloud-plugins .cloud-plugin:hover figure {
+  width: calc(100% - 20px);
+  height: 170px;
+  top: -25px;
+  left: 10px;
+  background-position: 0% 50%;
 }
 .cloud-plugins .cloud-plugin figure {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-  overflow: hidden;
-  height: 166px;
-}
-@media (min-width: 768px) {
-  .cloud-plugins .cloud-plugin figure {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-.cloud-plugins .cloud-plugin figure img {
-  max-height: 166px;
-  background-size: contain !important;
-  margin: auto;
-  max-width: 270px;
-}
-.cloud-plugins .cloud-plugin figure div {
+  height: 100px;
   position: absolute;
-  width: 30px;
-  height: 100%;
-  top: 0;
-  right: -3px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&1+65,0+100 */
-  background: -webkit-linear-gradient(left, rgba(17, 17, 17, 0) 0%, #111111 70%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(17, 17, 17, 0) 0%, gradient2 70%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  top: 10px;
+  left: 20px;
+  width: 100px;
+  background-size: contain;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  margin: 0;
+  transition: all 0.33s linear;
 }
 .cloud-plugins .cloud-plugin .description {
+  transition: all 0.33s;
   display: block;
   line-height: 1.5;
-  height: 99px;
   overflow: hidden;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 140px;
+  background: rgba(33, 33, 33, 0.66);
 }
 .cloud-plugins .cloud-plugin .description .no_description {
-  color: #444;
+  color: rgba(255, 255, 255, 0.25);
 }
-.cloud-plugins .cloud-plugin .description .see_more {
+.cloud-plugins .cloud-plugin .description hr {
+  transition: all 0.33s;
+  border: none;
+  border-bottom: 1px solid #883996;
+  margin: 0;
   position: absolute;
+  top: 50%;
+  left: 0;
   width: 100%;
-  height: 18px;
-  bottom: 0;
-  margin-bottom: 25px;
-  z-index: 10;
-  background: -moz-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(17, 17, 17, 0)), color-stop(100%, #111111));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, rgba(17, 17, 17, 0) 0%, #111111 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00222222', endColorstr='#222222', GradientType=0);
-  /* IE6-9 */
 }
 .cloud-plugins .cloud-plugin .description .title {
   display: block;
-  height: 18px;
   text-transform: uppercase;
   font-weight: bold;
   overflow: hidden;
-  position: relative;
+  padding: 8px 10px 1px 10px;
+}
+.cloud-plugins .cloud-plugin .description .author {
+  display: block;
+  padding: 1px 10px;
+}
+.cloud-plugins .cloud-plugin .description p {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 75%;
+  transform: translateY(-50%);
+  height: 2.4em;
+  line-height: 1.2em;
+  overflow: hidden;
 }
 .cloud-plugins .cloud-plugin .status {
-  display: inline-block;
+  display: block;
   padding: 1px 4px;
-  margin-top: 10px;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 9px;
+  position: absolute;
+  top: 3px;
+  right: 3px;
 }
 .cloud-plugins .cloud-plugin .status.installed {
+  border: 1px solid #883996;
   background-color: #883996;
 }
 .cloud-plugins .cloud-plugin .status.installed:after {
   content: "installed";
 }
 .cloud-plugins .cloud-plugin .status.outdated {
+  border: 1px solid #f29446;
   background-color: #f29446;
+  color: #212121;
 }
 .cloud-plugins .cloud-plugin .status.outdated:after {
   content: "new version";
