New styles for plugins settings

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -140,7 +140,7 @@ input::selection {
       background: #000;
     }
     &.selected:hover {
-      background: shade(@brand-primary, 20%);
+      background: #600E6F;
     }
   }
   .bank-item {
