--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -79,7 +79,7 @@
         &:checked + label {
           background: @brand-warning;
           &:hover {
-            background: shade(@brand-warning, 20%);
+            background: #600E6F;
           }
         }
       }
@@ -114,7 +114,7 @@
             background: #000;
           }
           &.selected:hover {
-            background: shade(@brand-primary, 20%);
+            background: #600E6F;
           }
         }
       }
