Disconnect button: mute all related HTML, CSS and JS, markered with TODO: cleanup; Minor UI design fixes

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -334,7 +334,6 @@ input::selection {
   .box {
     background: #111;
     padding: 0;
-    padding-top: 5px;
     box-sizing: border-box;
   }
   input {
@@ -342,7 +341,7 @@ input::selection {
     padding-left: 1em
   }
   .form-group {
-    padding-left: 15px;
+    
   }
   .remove {
     display: none !important;
@@ -363,6 +362,7 @@ input::selection {
   input[type="search"] {
     width: 50% !important;
     float: right;
+    margin: 5px;
   }
   select {
     width: 100%;
