--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6544,15 +6544,11 @@ button.close {
 #bank-library #bank-pedalboards-search .box {
   background: #111;
   padding: 0;
-  padding-top: 5px;
   box-sizing: border-box;
 }
 #bank-library #bank-pedalboards-search input {
   width: 50%;
   padding-left: 1em;
-}
-#bank-library #bank-pedalboards-search .form-group {
-  padding-left: 15px;
 }
 #bank-library #bank-pedalboards-search .remove {
   display: none !important;
@@ -6573,6 +6569,7 @@ button.close {
 #bank-library #bank-pedalboards-search input[type="search"] {
   width: 50% !important;
   float: right;
+  margin: 5px;
 }
 #bank-library #bank-pedalboards-search select {
   width: 100%;
@@ -7017,6 +7014,15 @@ hr.dotted {
   position: absolute;
   right: 0;
   z-index: 10;
+  /* TODO: cleanup
+   #mod-disconnect,*/
+  /* TODO: cleanup
+    #mod-disconnect {
+    background-image: url(../img/icons/25/disconnect.png);
+    &:hover {
+      background-color: @brand-primary;
+    }
+  }*/
 }
 #main-menu > div {
   cursor: pointer;
@@ -7126,7 +7132,6 @@ hr.dotted {
   background-color: #000;
   background-position: -180px bottom;
 }
-#main-menu #mod-disconnect,
 #main-menu .mod-add-midi,
 #main-menu .mod-bypass-l,
 #main-menu .mod-bypass-r,
@@ -7145,7 +7150,6 @@ hr.dotted {
   width: auto !important;
   transition: all 0.33s;
 }
-#main-menu #mod-disconnect:hover,
 #main-menu .mod-add-midi:hover,
 #main-menu .mod-bypass-l:hover,
 #main-menu .mod-bypass-r:hover,
@@ -7153,19 +7157,12 @@ hr.dotted {
 #main-menu #mod-ram:hover {
   background-color: #000;
 }
-#main-menu #mod-disconnect.selected,
 #main-menu .mod-add-midi.selected,
 #main-menu .mod-bypass-l.selected,
 #main-menu .mod-bypass-r.selected,
 #main-menu #mod-cpu.selected,
 #main-menu #mod-ram.selected {
   background-color: #333;
-}
-#main-menu #mod-disconnect {
-  background-image: url(../img/icons/25/disconnect.png);
-}
-#main-menu #mod-disconnect:hover {
-  background-color: #883996;
 }
 #main-menu .mod-add-midi {
   background-image: url(../img/icons/25/midi.png);
