--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -343,7 +343,8 @@ hr.dotted {
     }
   }
 
-  #mod-disconnect,
+  /* TODO: cleanup
+   #mod-disconnect,*/
   .mod-add-midi,
   .mod-bypass-l,
   .mod-bypass-r,
@@ -367,12 +368,13 @@ hr.dotted {
       background-color: #333;
     }
   }
-  #mod-disconnect {
+  /* TODO: cleanup
+    #mod-disconnect {
     background-image: url(../img/icons/25/disconnect.png);
     &:hover {
       background-color: @brand-primary;
     }
-  }
+  }*/
   .mod-add-midi {
     background-image: url(../img/icons/25/midi.png);
   }
