Minor visual improvements

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -279,6 +279,7 @@ input::selection {
     .info {
       height: 32px;
       padding-left: 5px;
+      background: rgba(255,255,255,0.07);
     }
     .title {
       display: block;
@@ -441,11 +442,12 @@ input::selection {
   top: 45px;
   overflow: auto;
   width: 30%;
-  background: #2c2c2c;
+  background: #111;
   .pedalboard {
     color: #fff;
+    background: rgba(255,255,255,0.07);
     cursor: -webkit-grab;
-    margin: 20px 20px 0 20px;
+    margin: 0px 20px 20px 0px;
     transition: all 0.33s;
     &:active {
       cursor: -webkit-grabbing !important;
