--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -92,6 +92,7 @@
       .info {
         height: 32px;
         padding-left: 5px;
+        background: rgba(255,255,255,0.07);
       }
       .title {
         display: block;
