--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -343,8 +343,7 @@ hr.dotted {
     }
   }
 
-  /* TODO: cleanup
-   #mod-disconnect,*/
+  #mod-disconnect,
   .mod-add-midi,
   .mod-bypass-l,
   .mod-bypass-r,
@@ -368,13 +367,12 @@ hr.dotted {
       background-color: #333;
     }
   }
-  /* TODO: cleanup
-    #mod-disconnect {
+  #mod-disconnect {
     background-image: url(../img/icons/25/disconnect.png);
     &:hover {
       background-color: @brand-primary;
     }
-  }*/
+  }
   .mod-add-midi {
     background-image: url(../img/icons/25/midi.png);
   }
