Fix add-midi and disconnect buttons

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -142,7 +142,7 @@ body {
 
 body {
   background: #111;
-  
+
   min-width: 1024px;
 }
 
@@ -344,7 +344,7 @@ hr.dotted {
   }
 
   #mod-disconnect,
-  .mod-add-midi,
+  #mod-add-midi,
   .mod-bypass-l,
   .mod-bypass-r,
   #mod-cpu, #mod-ram {
@@ -373,7 +373,7 @@ hr.dotted {
       background-color: @brand-primary;
     }
   }
-  .mod-add-midi {
+  #mod-add-midi {
     background-image: url(../img/icons/25/midi.png);
   }
   .mod-bypass-l {
