--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7154,7 +7154,7 @@ hr.dotted {
   background-position: -180px bottom;
 }
 #main-menu #mod-disconnect,
-#main-menu .mod-add-midi,
+#main-menu #mod-add-midi,
 #main-menu .mod-bypass-l,
 #main-menu .mod-bypass-r,
 #main-menu #mod-cpu,
@@ -7173,7 +7173,7 @@ hr.dotted {
   transition: all 0.33s;
 }
 #main-menu #mod-disconnect:hover,
-#main-menu .mod-add-midi:hover,
+#main-menu #mod-add-midi:hover,
 #main-menu .mod-bypass-l:hover,
 #main-menu .mod-bypass-r:hover,
 #main-menu #mod-cpu:hover,
@@ -7181,7 +7181,7 @@ hr.dotted {
   background-color: #000;
 }
 #main-menu #mod-disconnect.selected,
-#main-menu .mod-add-midi.selected,
+#main-menu #mod-add-midi.selected,
 #main-menu .mod-bypass-l.selected,
 #main-menu .mod-bypass-r.selected,
 #main-menu #mod-cpu.selected,
@@ -7194,7 +7194,7 @@ hr.dotted {
 #main-menu #mod-disconnect:hover {
   background-color: #883996;
 }
-#main-menu .mod-add-midi {
+#main-menu #mod-add-midi {
   background-image: url(../img/icons/25/midi.png);
 }
 #main-menu .mod-bypass-l {
