--- a/html/css/main.css
+++ b/html/css/main.css
@@ -8066,22 +8066,27 @@ header#pedalboard-actions {
 .mod-box input[type="password"] {
   width: 190px;
 }
-.screen-disconnected {
+.blocker {
   background: rgba(17, 17, 17, 0.9);
   color: white;
   display: block;
   position: fixed;
   width: 100% !important;
   height: 100% !important;
+  top: 0;
+  left: 0;
   text-align: center;
-  z-index: 10;
+  z-index: 10000000;
 }
-.screen-disconnected p {
+.blocker p {
   position: absolute;
   top: 50%;
   width: 100%;
   margin-top: 56px;
   font-size: 24px;
+}
+.blocker.screen-disconnected {
+  background: rgba(17, 17, 17, 0.9) url(../img/icons/block.png) 50% 50% no-repeat;
 }
 .plugin-wait {
   background: url(../img/loading-effect.gif) no-repeat center center;
