Nicer drag pedalboard style in banks

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -35,6 +35,8 @@ z-index: 2;
     color: white;
     font-weight: bold;
     z-index: 10000;
+    box-shadow: 0 5px 15px black;
+    opacity: 0.5;
 }
 span {
     &.move {
