--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6230,6 +6230,8 @@ button.close {
   color: white;
   font-weight: bold;
   z-index: 10000;
+  box-shadow: 0 5px 15px black;
+  opacity: 0.5;
 }
 #bank-library .mod-banks-drag-item .img {
   display: block;
