--- a/html/css/main.css
+++ b/html/css/main.css
@@ -8090,9 +8090,36 @@ header#pedalboard-actions {
 .blocker.screen-disconnected {
   background: rgba(17, 17, 17, 0.9) url(../img/icons/block.png) 50% 50% no-repeat;
 }
+.blocker.screen-disconnected .button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 120px;
+}
 .plugin-wait {
   background: url(../img/loading-effect.gif) no-repeat center center;
   border: 1px solid #CCCCCC;
+}
+.button {
+  background: #883996;
+  color: white;
+  display: inline-block;
+  cursor: pointer;
+  line-height: 25px;
+  padding: 5px 15px;
+  transition: all 0.33s;
+  border: none;
+}
+.button:hover {
+  background-color: #f29446;
+  box-shadow: 0 1px 5px black;
+}
+.button.icon {
+  padding-left: 40px;
+  background-position: 10px 50%;
+  background-repeat: no-repeat;
+  background-size: 25px;
 }
 .drag-handle {
   bottom: 0;
