added checkbox for pedalboard footswitch navigation in banks section

--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -246,11 +246,15 @@ input::selection {
     padding: 0em;
     max-height: 2em;
     display: block;
-    margin: 1em;
-    padding-bottom: 1em;
+    margin: 0.5em 0.8em 0 0.8em;
+    padding-bottom: 0.2em;
     color: white;
     white-space: nowrap;
     overflow: hidden;
+  }
+  form {
+    margin: 0 2em;
+    color: #666;
   }
   h2 {
     margin: 4px 0 0 14px;
