Make 'label' of bypass address dialog an advanced option This matches the addressing of normal parameters

--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -9,10 +9,15 @@
                     <select class="form-control" name="actuator"></select>
                 </div>
             </div>
-            <div class="form-group clearfix">
-                <label>Label</label>
-                <div class="mod-controls">
-                    <input class="form-control" name="label" type="text"/>
+            <label class="label-toggle" for="toggle-address"><a>Advanced</a></label>
+            <div>
+                <br /><br />
+                <input class="checkbox-toggle" type="checkbox" id="toggle-address" />
+                <div class="form-group clearfix">
+                    <label>Label</label>
+                    <div class="mod-controls">
+                        <input class="form-control" name="label" type="text"/>
+                    </div>
                 </div>
             </div>
             <hr class="col-xs-12" style="padding:0" />
