--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -60,6 +60,7 @@
     bottom: 45px;
     overflow: auto;
     background: #111 url(../img/watermark.png) 100% 100% no-repeat;
+    overflow: auto;
     padding-top: 1.5%;
     .pedalboard {
       color: #fff;
