--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -381,7 +381,7 @@ hr.dotted {
       background-color: @brand-primary;
     }
   }
-  
+
   #mod-cpu, #mod-ram {
     cursor: default;
     width: 115px !important;
@@ -857,49 +857,99 @@ header#pedalboard-actions {
   }
 
   .plugin-info {
-    background: rgba(17, 17, 17, 0.9);
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+    background-color: rgba(20,20,20,.9);
+    bottom: 0;
+    color: #ccc;
+    left: 0;
+    overflow-y: scroll;
     position: fixed;
+    right: 0;
+    top: 0px;
     z-index: 40;
-    .plugin-menu {
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        button {
-            float: left;
-            padding-left: 33px;
-            background-size: 25px;
-            background-position: 5px 50%;
-            background-repeat: no-repeat;
-            margin-left: 4px;
-            &.js-close {
-                background-image: url(../img/icons/25/close.png);
-            }
-            &.js-remove {
-                background-image: url(../img/icons/25/remove.png);
-            }
-            &.js-install {
-                background-image: url(../img/icons/25/install.png);
-            }
-            &.js-update {
-                background-image: url(../img/icons/25/update.png);
-            }
-        }
+    .box {
+      margin-top: 3em;
+      background-color: #111;
+      padding: 15px;
+      border: 2px solid #333;
     }
-    .plugin-table {
-        display: table;
-        max-height: 90%;
-        width: 90%;
-        max-width: 960px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    .close {
+      color: #fff;
+      font-size: 12px;
+      font-weight: bold;
+      opacity: 1;
+      position: absolute;
+      right: 10px;
+      text-shadow: none;
+      text-transform: uppercase;
+      top: 10px;
     }
-    
+    .screenshot {
+      padding: 18px;
+      min-width: 3em;
+      min-height: 9em;
+      display: inline-block;
+      z-index: 0;
+    }
+    figure {
+      .make-md-column(4);
+      &:hover {
+        z-index: 10 !important;
+      }
+    }
+    .plugin-description {
+      .make-md-column(7);
+      height: 100%;
+      display: block;
+      position: a;
+      padding-bottom: 20%;
+      padding-left: 45px;
+      @gradient1: rgba(17,17,17,0.1);
+      @gradient2: rgba(17,17,17,1);
+      background: -moz-linear-gradient(left, @gradient1 1em, @gradient2 2em);
+      background: -webkit-gradient(linear, left top, right top, color-stop(1em, @gradient1), color-stop(2em, @gradient2));
+      background: -webkit-linear-gradient(left, @gradient1 1em, @gradient2 2em);
+      background: -o-linear-gradient(left, @gradient1 1em, @gradient2 2em);
+      background: -ms-linear-gradient(left, @gradient1 1em, @gradient2 2em);
+      background: linear-gradient(to right, @gradient1 1em, @gradient2 2em);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=1);
+      >p {
+        font-size: 16px;
+        margin-bottom: 27px;
+        white-space: pre-wrap;
+      }
+    }
+    header {
+      padding: 18px 0 0;
+      h1 {
+        color: #fff;
+        font-size: 27px;
+        font-weight: bold;
+        line-height: 1;
+        margin: 0;
+        padding: 0;
+      }
+      h1 span {
+        font-size: 16px;
+        line-height: 1;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .version {
+      color: #ccc;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      span.bold {
+        color: #fff;
+        font-size: 14px;
+      }
+      button {
+        font-weight: bold;
+        margin-top: 6px;
+        text-transform: uppercase;
+      }
+    }
     .rating {
       background: url(../img/icn-rating.png) no-repeat -12px top;
       display: inline-block;
